# contracts/urls.py
@@ -2,6 +2,7 @@ from django.urls import path
 
 from .views import (
     cancel_contract_view,
+    contract_create_view,
     contract_detail_view,
     contract_list_view,
     finish_contract_view,
@@ -11,6 +12,7 @@ from .views import (
 
 urlpatterns = [
     path("", contract_list_view),
+    path("create/", contract_create_view),
     path("<int:contract_id>/", contract_detail_view),
     path("<int:contract_id>/finish/", finish_contract_view),
     path("<int:contract_id>/cancel/", cancel_contract_view),
